# openclaw-panel-tauri

./: .gitignore  Dockerfile  README.md  TEST-REPORT.md  build.js  config.json  docker-compose.yml  electron-main.js  package-lock.json  package.json  server.js  test-android.js  test-panel.js  test-platforms.js
.github/workflows/: android.yml  build.yml
lib/: gateway.js
public/: app.js  index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
