[package]
name = "openclaw-panel"
version = "1.0.0"
description = "OpenClaw Multi-Instance Management Panel"
authors = ["openclaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "openclaw_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
